enable 0.8 and fix scroll bug on mobile devices

--- a/main.css
+++ b/main.css
@@ -15,6 +15,8 @@ body {
 }
 #matchfield{
   display: none;
+  max-height: 100%; 
+  overflow: hidden;
 }
 .footer {
   position: absolute;
